--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <title> My first Website </title>
-</html>
+<body bg=red>
 <h1>Hello World!</h1>
 <p> I'll add more stuff here later.
 </body>
