--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <title> My first Website </title>
-<body bgcolor=red>
-<h1>Hello World!</h1>
+<body bgcolor="red">
+  <h1><a href="soundcloud.com/cocainetoenails">Hello World!</a></h1>
 <p> I'll add more stuff here later.
 </body>
 </html>
