--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <title> My first Website </title>
 <body bgcolor="red">
-  <h1><a href="https://i.ytimg.com/vi/oHg5SJYRHA0/hqdefault.jpg">Hello World!</a></h1>
+  <h1><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Hammer_and_sickle.svg/414px-Hammer_and_sickle.svg.png">Hello World!</a></h1>
 <p> I'll add more stuff here later.
 </body>
 </html>
