--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <title> My first Website </title>
 <body bgcolor="red">
   <h1><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Hammer_and_sickle.svg/414px-Hammer_and_sickle.svg.png">Hello World!</a></h1>
-<p> I'll add more stuff here later.
+<p> This is the land of the free and equal.
 </body>
 </html>
