--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <title> My first Website </title>
-<body bgcolor="red">
+<body bgcolor="red" bgimage="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Hammer_and_sickle.svg/414px-Hammer_and_sickle.svg.png">
   <h1><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Hammer_and_sickle.svg/414px-Hammer_and_sickle.svg.png">Hello World!</a></h1>
 <p> This is the land of the free and equal.
 </body>
