--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <title> My first Website </title>
-<body bgcolor="red" background="https://images.genius.com/9fda81dde5dba59613fdee7dc7467c77.1000x1000x1.jpg">
+<body bgcolor="red" background="https://images.genius.com/9fda81dde5dba59613fdee7dc7467c77.1000x1000x1.jpg" width="800" height="800">
   <h1><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Hammer_and_sickle.svg/414px-Hammer_and_sickle.svg.png">Hello World!</a></h1>
 <p> This is the land of the free and equal.
 </body>
