--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
+  <head>
+    <link type="text/css" rel="stylesheet" href="/stylesheet.css"/>
+  </head>
 <title> My first Website </title>
-<body bgcolor="red" background="https://images.genius.com/9fda81dde5dba59613fdee7dc7467c77.1000x1000x1.jpg" style="width:304px;height:228px;">
-  <h1><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Hammer_and_sickle.svg/414px-Hammer_and_sickle.svg.png">Hello World!</a></h1>
+<body background="https://images.genius.com/9fda81dde5dba59613fdee7dc7467c77.1000x1000x1.jpg">
+  
 <p> This is the land of the free and equal.
 </body>
 </html>
