--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link type="text/css" rel="stylesheet" href="/stylesheet.css"/>
   </head>
 <title> My first Website </title>
-<body background="https://images.genius.com/9fda81dde5dba59613fdee7dc7467c77.1000x1000x1.jpg">
+<body>
   
 <p> This is the land of the free and equal.
 </body>
