--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link type="text/css" rel="stylesheet" href="/stylesheet.css"/>
+    <link type="text/css" rel="stylesheet" href="https://mellea.github.io/projectone/stylesheet.css"/>
   </head>
 <title> My first Website </title>
 <body>
