--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <title> My first Website </title>
 <body>
   
-<p> This is the land of the free and equal.
+<p> bg color = "red" This is the land of the free and equal.
 </body>
 </html>
