--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <title> My first Website </title>
 <body>
   
-<p> bg color = "red" Please don't touch my Raf.
+<p> Please don't touch my Raf.
 </body>
 </html>
