--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
 <title> My first Website </title>
 <body>
   
-<p> Please don't touch my Raf.
-</body>
+<html>
+   <head>
+      <style>
+      h1 {
+         color: blue;
+         font-size: 28pt;
+      }
+      body {
+          background-image: url("http://m.99wallpaper.com/images/7_1306/Black%20Background%20Wood%20-%202560x1600%20by%20Freeman.jpg")
+      }
+      </style>
+   </head>
+   <body>
+      <h1>Hello World!!</h1>
+      <p>The paragraph text should be unchanged</p>
+      <h2>I am not blue!</h2>
+      <h1>Hello Again</h1>
+   </body>
 </html>
