--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
          color: blue;
          font-size: 28pt;
       }
+        h2 {
+          color: Blue;
+          font-size: 14pt;
+        }
       </style>
    </head>
    <body>
       <h1>Please don't touch my Raf</h1>
-      <p>I'm racked up like rappers
+      <h2>I'm racked up like rappers
 I'm Raf'd up on camera
 Get knocked out on camera
 Squeeze pump like asthma
 It's rare Raf when I wear Raf
 Bare Raf when I wear Raf
-Might invest into some Raf sharesed</p>
+Might invest into some Raf sharesed</h2>
    </body>
 </html>
