--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
    <body>
       <h1>Please don't touch my Raf</h1>
       <h2>I'm racked up like rappers
-I'm Raf'd up on camera
-Get knocked out on camera
-Squeeze pump like asthma
-It's rare Raf when I wear Raf
-Bare Raf when I wear Raf
-Might invest into some Raf sharesed</h2>
+<br /> I'm Raf'd up on camera
+<br /> Get knocked out on camera
+<br /> Squeeze pump like asthma
+<br /> It's rare Raf when I wear Raf
+<br /> Bare Raf when I wear Raf
+<br /> Might invest into some Raf shared</h2>
    </body>
 </html>
