--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
    <head>
       <style>
       h1 {
-         color: blue;
+         color: #D29B1C;
          font-size: 28pt;
       }
         h2 {
-          color: Blue;
+          color: #D29B1C;
           font-size: 14pt;
         }
       </style>
