--- a/index.html
+++ b/index.html
@@ -20,12 +20,7 @@
    </head>
    <body>
       <h1>Please don't touch my Raf</h1>
- 
-     <video height=312 width= 540 controls>
-    <source src="https://www.youtube.com/watch?v=Arr3a9FlX3c" type="video/mp4">
-  Your browser does not support the video element.
-</video>
-     
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Arr3a9FlX3c" frameborder="0" allowfullscreen></iframe>
       <h2>I'm racked up like rappers
 <br /> 
 <br /> I'm Raf'd up on camera
