--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <link type="text/css" rel="stylesheet" href="https://mellea.github.io/projectone/stylesheet.css"/>
   </head>
-<title> My first Website </title>
+<title> Raf Life </title>
 <body>
   
 <html>
