--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
    <body>
       <h1>Please don't touch my Raf</h1>
 <img src="https://media.giphy.com/media/BLvEwDd2WQ36/giphy.gif" alt="HTML5 Icon" style="width:300px;height:150px;">
-      <h2>I'm racked up like rappers
+     <style type="img src">
+<!--
+.tab { margin-left: 40px; }
+-->
+</style>
+     <h2>I'm racked up like rappers
 <br /> 
 <br /> I'm Raf'd up on camera
 <br /> 
