--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    <body>
       <h1>Please don't touch my Raf</h1>
 <img src="https://media.giphy.com/media/BLvEwDd2WQ36/giphy.gif" alt="HTML5 Icon" style="width:300px;height:150px;">
-     <style type="img src">
+     <style type="img">
 <!--
 .tab { margin-left: 40px; }
 -->
