--- a/index.html
+++ b/index.html
@@ -20,12 +20,8 @@
    </head>
    <body>
       <h1>Please don't touch my Raf</h1>
-<img src="https://media.giphy.com/media/BLvEwDd2WQ36/giphy.gif" alt="HTML5 Icon" style="width:300px;height:150px;">
-     <style type="img">
-<!--
-.tab { margin-left: 300px; }
--->
-</style>
+<img src="https://media.giphy.com/media/BLvEwDd2WQ36/giphy.gif" alt="HTML5 Icon" style="width:300px;height:150px; margin-left: 300px;">
+    
      <h2>I'm racked up like rappers
 <br /> 
 <br /> I'm Raf'd up on camera
