--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <br /> 
 <br /> Bare Raf when I wear Raf
 <br /> 
-<br /> Might invest into some Raf shared</h2>
+<br /> Might invest into some Raf shares</h2>
   </body>
 </html>
   <body>
