--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 <br /> Might invest into some Raf shares</h2>
   </body>
 </html>
+ <html>
   <body>
     <img src ="https://cdna.lystit.com/photos/594f-2014/04/26/raf-simons-green-mens-short-sleeved-jacquard-knit-short-sleeve-t-shirts-product-1-19568106-2-350798798-normal.jpeg;">
          </body> 
+  </html>
