--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    <body>
       <h1>Please don't touch my Raf</h1>
 <img src="https://media.giphy.com/media/BLvEwDd2WQ36/giphy.gif" alt="HTML5 Icon" style="position: relative; width:300px;height:150px; margin-left: 1000px;">
-<img src ="https://cdna.lystit.com/photos/594f-2014/04/26/raf-simons-green-mens-short-sleeved-jacquard-knit-short-sleeve-t-shirts-product-1-19568106-2-350798798-normal.jpeg">
+<img src ="https://cdna.lystit.com/photos/594f-2014/04/26/raf-simons-green-mens-short-sleeved-jacquard-knit-short-sleeve-t-shirts-product-1-19568106-2-350798798-normal.jpeg" style="width: 150px; height:300px">
      <h2>I'm racked up like rappers
 <br /> 
 <br /> I'm Raf'd up on camera
