--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    </head>
    <body>
       <h1>Please don't touch my Raf</h1>
-        <img id="a" class="rocky" src="https://media.giphy.com/media/BLvEwDd2WQ36/giphy.gif" />
+        <img id="a" class="rocky" src="https://media.giphy.com/media/BLvEwDd2WQ36/giphy.gif"; width: 300px; height; 150px; />
      <h2>I'm racked up like rappers
 <br /> 
 <br /> I'm Raf'd up on camera
