--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
          color: #D29B1C;
          font-size: 28pt;
       }
+        h2 {
+          color: #D29B1C;
+          font-size: 14pt;
+        }
       </style>
    </head>
    <body>
