--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <br /> Bare Raf when I wear Raf
 <br /> 
 <br /> Might invest into some Raf shares</h2>
-     <h2>London                |           Tokyo     |             <a href="https://www.youtube.com/watch?v=QgL33XNLhu0">Berlin</a></h2>
+     <h2> <a href = "https://www.maisonmargiela.com/us">Margiela </a>               |           <a href= "http://rafsimons.com/">Raf Simons</a>     |             <a href="http://www.supremenewyork.com/">Supreme</a></h2>
   </body>
 </html>
  
