--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <link type="text/css" rel="stylesheet" href="https://mellea.github.io/projectone/stylesheet.css"/>
   </head>
-<title> Raf Life </title>
+  <title><b> Raf Life </b></title>
 <body>
   
 <html>
@@ -37,7 +37,7 @@
 <br />
 <br />
 <br />
-     <h2> <a href = "https://www.maisonmargiela.com/us">Margiela </a>               |           <a href= "http://rafsimons.com/">Raf Simons</a>     |             <a href="http://www.supremenewyork.com/">Supreme</a></h2>
+     <h2><i> <a href = "https://www.maisonmargiela.com/us">Margiela </a>               |           <a href= "http://rafsimons.com/">Raf Simons</a>     |             <a href="http://www.supremenewyork.com/">Supreme</a></i></h2>
   </body>
 </html>
  
