--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <link type="text/css" rel="stylesheet" href="https://mellea.github.io/projectone/stylesheet.css"/>
   </head>
-  <title><b> Raf Life </b></title>
+  <title> Raf Life </title>
 <body>
   
 <html>
@@ -19,7 +19,7 @@
       </style>
    </head>
    <body>
-      <h1>Please don't touch my Raf</h1>
+     <h1><b>Please don't touch my Raf</b></h1>
         <img id="a" class="rocky" src="https://media.giphy.com/media/BLvEwDd2WQ36/giphy.gif"; width: 300px; height; 150px; />
      <h2>I'm racked up like rappers
 <br /> 
