--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 <br />
 <br />
      <h2><i> <a href = "https://www.maisonmargiela.com/us">Margiela </a>               |           <a href= "http://rafsimons.com/">Raf Simons</a>     |             <a href="http://www.supremenewyork.com/">Supreme</a></i></h2>
+<p id="demo"></p>
+<script>
+document.getElementById("demo").innerHTML = "Hello JavaScript!";
+</script> 
   </body>
 </html>
  
