--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
 <br />
 <br />
      <h2><i> <a href = "https://www.maisonmargiela.com/us">Margiela </a>               |           <a href= "http://rafsimons.com/">Raf Simons</a>     |             <a href="http://www.supremenewyork.com/">Supreme</a></i></h2>
+<h1>My First JavaScript</h1>
+
+<button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+Click me to display Date and Time.</button>
+
 <p id="demo"></p>
-<script>
-document.getElementById("demo").innerHTML = "Hello JavaScript!";
-</script> 
   </body>
 </html>
  
