--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
      <h2><i> <a href = "https://www.maisonmargiela.com/us">Margiela </a>               |           <a href= "http://rafsimons.com/">Raf Simons</a>     |             <a href="http://www.supremenewyork.com/">Supreme</a></i></h2>
 
 <button type="button"
-onclick="http://www.spin.com/2017/05/asap-rocky-la-home-armed-robbery/">
+onclick="document.getElementById(gif).src = "https://media.giphy.com/media/LXONhtCmN32YU/giphy.gif>
 Click me to for more information.</button>
 
-<p id="demo"></p>
+<p id="gif"></p>
   </body>
 </html>
  
