--- a/index.html
+++ b/index.html
@@ -38,12 +38,24 @@
 <br />
 <br />
      <h2><i> <a href = "https://www.maisonmargiela.com/us">Margiela </a>               |           <a href= "http://rafsimons.com/">Raf Simons</a>     |             <a href="http://www.supremenewyork.com/">Supreme</a></i></h2>
+<script>
+function light(sw) {
+    var pic;
+    if (sw == 0) {
+        pic = "pic_bulboff.gif"
+    } else {
+        pic = "pic_bulbon.gif"
+    }
+    document.getElementById('myImage').src = pic;
+}
+</script>
 
-<button type="button"
-onclick="document.getElementById(gif).src = "https://media.giphy.com/media/LXONhtCmN32YU/giphy.gif>
-Click me to for more information.</button>
+<img id="myImage" src="pic_bulboff.gif" width="100" height="180">
 
-<p id="gif"></p>
+<p>
+<button type="button" onclick="light(1)">Light On</button>
+<button type="button" onclick="light(0)">Light Off</button>
+</p>
   </body>
 </html>
  
