--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@ function light(sw) {
 }
 </script>
 
-<img id="myImage" src="pic_bulboff.gif" width="100" height="180">
+<img id="b" src="https://media.giphy.com/media/LXONhtCmN32YU/giphy.gif" width="100" height="180">
 
 <p>
-<button type="button" onclick="light(1)">Light On</button>
-<button type="button" onclick="light(0)">Light Off</button>
+<button type="button" onclick="light(1)">rick</button>
+<button type="button" onclick="light(0)">morty</button>
 </p>
   </body>
 </html>
