--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ function light(sw) {
 <img id="b" src="https://media.giphy.com/media/LXONhtCmN32YU/giphy.gif" width="100" height="180">
 
 <p>
-<button type="button" onclick="light(1)">rick</button>
-<button type="button" onclick="light(0)">morty</button>
+<button type="button" onclick="show(1)">rick</button>
+<button type="button" onclick="hide(0)">morty</button>
 </p>
   </body>
 </html>
