--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
 function light(sw) {
     var pic;
     if (sw == 0) {
-        pic = "pic_bulboff.gif"
+        pic = "b"
     } else {
-        pic = "pic_bulbon.gif"
+        pic = "c"
     }
     document.getElementById('myImage').src = pic;
 }
 </script>
 
 <img id="b" src="https://media.giphy.com/media/LXONhtCmN32YU/giphy.gif" width="100" height="180">
-
+<img id="c" src="https://media.giphy.com/media/3oEdva2j2viubNhSes/giphy.gif" width="100" height="180">
 <p>
 <button type="button" onclick="show(1)">rick</button>
 <button type="button" onclick="hide(0)">morty</button>
