--- a/index.html
+++ b/index.html
@@ -38,24 +38,11 @@
 <br />
 <br />
      <h2><i> <a href = "https://www.maisonmargiela.com/us">Margiela </a>               |           <a href= "http://rafsimons.com/">Raf Simons</a>     |             <a href="http://www.supremenewyork.com/">Supreme</a></i></h2>
-<script>
-function light(sw) {
-    var pic;
-    if (sw == 0) {
-        pic = "b"
-    } else {
-        pic = "c"
-    }
-    document.getElementById('myImage').src = pic;
-}
-</script>
+<button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+Click me to display Date and Time.</button>
 
-<img id="b" src="https://media.giphy.com/media/LXONhtCmN32YU/giphy.gif" width="100" height="180">
-<img id="c" src="https://media.giphy.com/media/3oEdva2j2viubNhSes/giphy.gif" width="100" height="180">
-<p>
-<button type="button" onclick="show(1)">rick</button>
-<button type="button" onclick="hide(0)">morty</button>
-</p>
+<p id="demo"></p>
   </body>
 </html>
  
