--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
 <br />
 <br />
      <h2><i> <a href = "https://www.maisonmargiela.com/us">Margiela </a>               |           <a href= "http://rafsimons.com/">Raf Simons</a>     |             <a href="http://www.supremenewyork.com/">Supreme</a></i></h2>
+ <img id="b" class="rick" src="https://media.giphy.com/media/LXONhtCmN32YU/giphy.gif"; width: 300px; height; 150px; />
 <button type="button"
-onclick="document.getElementById('demo').innerHTML = Date()">
-Click me to display Date and Time.</button>
+onclick="document.getElementById('b').innerHTML = Date()">
+Click me to for information.</button>
 
-<p id="demo"></p>
+<p id="b"></p>
   </body>
 </html>
  
