--- a/index.html
+++ b/index.html
@@ -38,7 +38,24 @@
 <br />
 <br />
      <h2><i> <a href = "https://www.maisonmargiela.com/us">Margiela </a>               |           <a href= "http://rafsimons.com/">Raf Simons</a>     |             <a href="http://www.supremenewyork.com/">Supreme</a></i></h2>
+<h3>
+<style>
+ul  {
+    list-style: square url("sqpurple.gif");
+}
+</style>
+</h3>
+<body>
 
+<ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Coca Cola</li>
+</ul>
+
+</body>
+     
+    
 <button type="button"
 onclick="document.getElementById('demo').innerHTML = Date()">
 Click me to for date and time.</button>
