--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <h3>
 <style>
 ul  {
-    list-style: square url("https://33.media.tumblr.com/419ef4ac4dabf9bbdd42b75de7c8a52c/tumblr_nd8yso3GSP1rpj04no1_r1_500.gif"); height: 10px; width: 10px;
+    list-style: square url("http://rs1200.pbsrc.com/albums/bb331/EIGHTbyBIT/pixels/free_tiny_pikachu_by_radiotacticblast-d389dco.gif~c200");
 }
 </style>
 </h3>
