--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <h3>
 <style>
 ul  {
-    list-style: square url("http://rs1200.pbsrc.com/albums/bb331/EIGHTbyBIT/pixels/free_tiny_pikachu_by_radiotacticblast-d389dco.gif~c200");
+    list-style: square url("http://www.crvenazvezdafk.com/img/register_loader.gif");
 }
 </style>
 </h3>
