--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@ ul  {
 <body>
 
 <ul>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Coca Cola</li>
+  <li>Dior</li>
+  <li>Balenciaga</li>
+  <li>Chanel</li>
 </ul>
 
 </body>
