--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@ ul  {
 <body>
 
 <ul>
-  <li>Dior</li>
-  <li>Balenciaga</li>
-  <li>Chanel</li>
+  <li><em>Dior</em></li>
+  <li><em>Balenciaga</em></li>
+  <li><em>Chanel</em></li>
 </ul>
 
 </body>
