--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@ ul  {
   <li><em>Dior</em></li>
   <li><em>Balenciaga</em></li>
   <li><em>Chanel</em></li>
+  <ol>
+    <li><em>Bape</em></li>
+    <li><em>Yeezy</em></li>
+    <li><em>Givenchy</em></li>
+</ol>  
+
+
 </ul>
 
 </body>
