--- a/index.html
+++ b/index.html
@@ -59,7 +59,16 @@ ul  {
 </ol>  
 </body>
 </h3>   
-    
+
+     <h4>
+       <body>
+         <dl>
+<dt>Description list</dt><dd>A list for defining terms</dd>
+<dt>dt</dt><dd>The <code>dt</code> tags are for the term</dd>
+<dt>dd</dt><dd>The <code>dd</code> tags are for the description</dd>
+</dl>
+       </body>
+     </h4>
 <button type="button"
 onclick="document.getElementById('demo').innerHTML = Date()">
 Click me to for date and time.</button>
