--- a/index.html
+++ b/index.html
@@ -53,22 +53,14 @@ ul  {
   <li><em>Chanel</em></li>
 </ul>
 <ol>
-    <li><em>Bape</em></li>
+  <li><em><dt>Bape</dt></em></li>
     <li><em>Yeezy</em></li>
     <li><em>Givenchy</em></li>
 </ol>  
 </body>
 </h3>   
 
-     <h4>
-       <body>
-         <dl>
-<dt>Description list</dt><dd>A list for defining terms</dd>
-<dt>dt</dt><dd>The <code>dt</code> tags are for the term</dd>
-<dt>dd</dt><dd>The <code>dd</code> tags are for the description</dd>
-</dl>
-       </body>
-     </h4>
+     
 <button type="button"
 onclick="document.getElementById('demo').innerHTML = Date()">
 Click me to for date and time.</button>
