--- a/index.html
+++ b/index.html
@@ -53,12 +53,22 @@ ul  {
   <li><em>Chanel</em></li>
 </ul>
 <ol>
-  <li><em><dt>Bape</dt></em></li>
+  <li><em>Bape</em></li>
     <li><em>Yeezy</em></li>
     <li><em>Givenchy</em></li>
 </ol>  
 </body>
 </h3>   
+     <h4>
+       <body>
+         <dl>
+
+           <dt>Description list</dt><dd>A list for defining terms</dd>
+<dt>bape</dt><dd><code>bape</code> is a japanese fashion brand</dd>
+<dt>givenchy</dt><dd>givenchy <code>gicenchy</code> is a french fashion brand</dd>
+</dl>
+       </body>
+     </h4>
 
      
 <button type="button"
