--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ ul  {
          <dl>
 
            <dt>Description list</dt><dd>A list for defining terms</dd>
-<dt>bape</dt><dd><code>bape</code> is a japanese fashion brand</dd>
-<dt>givenchy</dt><dd>givenchy <code>gicenchy</code> is a french fashion brand</dd>
+<dt>bape</dt>bape<dd><code></code> is a japanese fashion brand</dd>
+<dt>givenchy</dt><dd>givenchy <code></code> is a french fashion brand</dd>
 </dl>
        </body>
      </h4>
