--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@ ul  {
        <body>
          <dl>
 
-           <dt>Description list</dt><dd>A list for defining terms</dd>
-<dt>bape</dt>bape<dd><code></code> is a japanese fashion brand</dd>
-<dt>givenchy</dt><dd>givenchy <code></code> is a french fashion brand</dd>
+           <dt>Description list</dt><dd>A list for defining brands</dd>
+<dt>bape</dt><dd><code></code> is a japanese fashion brand</dd>
+<dt>givenchy</dt><dd><code></code> is a french fashion brand</dd>
 </dl>
        </body>
      </h4>
