--- a/index.html
+++ b/index.html
@@ -69,8 +69,43 @@ ul  {
 </dl>
        </body>
      </h4>
-
-     
+<h5>
+  <body>
+   <table width='100%' border=1px cellspacing=0>
+ <caption>Table of Scores</caption>
+ <tr>
+     <th>Number</th>
+     <th>Brand</th>
+     <th>Price</th>
+     <th>Rare Points</th>
+ </tr>
+ <tr>
+     <td>1</td>
+     <td>Raf Simons</td>
+     <td>High</td>
+     <td>90</td>
+ </tr>
+ <tr>
+     <td>2</td>
+     <td>Supreme</td>
+     <td>low-medium</td>
+     <td>80</td>
+ </tr>
+ <tr>
+     <td>3</td>
+     <td>Saint laurant</td>
+     <td>insane</td>
+     <td>10,000,000</td>
+ </tr>
+ <tr>
+     <td>4</td>
+     <td>Givenchy</td>
+     <td>high</td>
+     <td>100</td>
+ </tr>
+ </table>
+  </body>
+     </h5>
 <button type="button"
 onclick="document.getElementById('demo').innerHTML = Date()">
 Click me to for date and time.</button>
