--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ ul  {
 <h5>
   <body>
    <table width='100%' border=1px cellspacing=0>
- <caption>Table of Scores</caption>
+     <caption><b>Table of Rareness</b></caption>
  <tr>
      <th>Number</th>
      <th>Brand</th>
@@ -93,7 +93,7 @@ ul  {
  </tr>
  <tr>
      <td>3</td>
-     <td>Saint laurant</td>
+     <td>Saint Laurent</td>
      <td>insane</td>
      <td>10,000,000</td>
  </tr>
