--- a/index.html
+++ b/index.html
@@ -106,6 +106,18 @@ ul  {
  </table>
   </body>
      </h5>
+     <h6>
+       <body>
+       
+
+<audio controls>
+    <source src="horse.ogg" type="audio/ogg">
+    <source src="horse.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
+
+       </body>
+     </h6>
 <button type="button"
 onclick="document.getElementById('demo').innerHTML = Date()">
 Click me to for date and time.</button>
