--- a/index.html
+++ b/index.html
@@ -45,8 +45,6 @@ ul  {
 }
 </style>
 
-<body>
-
 <ul>
   <li><em>Dior</em></li>
   <li><em>Balenciaga</em></li>
@@ -57,20 +55,16 @@ ul  {
     <li><em>Yeezy</em></li>
     <li><em>Givenchy</em></li>
 </ol>  
-</body>
 </h3>   
      <h4>
-       <body>
          <dl>
 
            <dt>Description list</dt><dd>A list for defining brands</dd>
 <dt>bape</dt><dd><code></code> is a japanese fashion brand</dd>
 <dt>givenchy</dt><dd><code></code> is a french fashion brand</dd>
 </dl>
-       </body>
      </h4>
 <h5>
-  <body>
    <table width='100%' border=1px cellspacing=0>
      <caption><b>Table of Rareness</b></caption>
  <tr>
@@ -104,17 +98,10 @@ ul  {
      <td>100</td>
  </tr>
  </table>
-  </body>
      </h5>
      <h6>
-       <body>
-       
-
-<iframe width="320" height="215"
-src="https://www.youtube.com/embed/v=gZLRjXorI_4?controls=0">
+<iframe width="320" height="215" src="https://www.youtube.com/watch?v=YCkpCPZ59l8controls=0">
 </iframe>
-
-       </body>
      </h6>
 <button type="button"
 onclick="document.getElementById('demo').innerHTML = Date()">
