--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@ ul  {
      </h5>
      <h6>
 <audio controls>
- 
-  <source src="horse.mp3" type="audio/mpeg">
+  <source src="thunder_sound_FX-Grant_Evans-1523270250.mp3" type="audio/mpeg">
   Your browser does not support the audio tag.
 </audio>
      </h6>
