--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 <br />
 <br />
 <br />
+     <video width="320" height="240" controls>
+  <source src="Cloud-9153(1).mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
      <h2><i> <a href = "https://www.maisonmargiela.com/us">Margiela </a>               |           <a href= "http://rafsimons.com/">Raf Simons</a>     |             <a href="http://www.supremenewyork.com/">Supreme</a></i></h2>
 <h3>
 <style>
@@ -103,10 +107,7 @@ ul  {
  </table>
      </h5>
      <h6>
-<video width="320" height="240" controls>
-  <source src="Cloud - 9153 (1).mp4" type="video/mp4">
-Your browser does not support the video tag.
-</video>
+
      </h6>
  
   </body>
