--- a/index.html
+++ b/index.html
@@ -1,16 +1,8 @@
 <html>
   <head>
     <link type="text/css" rel="stylesheet" href="https://mellea.github.io/projectone/stylesheet.css"/>
-  </head>
   <title> Raf Life </title>
-<body>
-  <audio controls>
-  <source src="ASAP Rocky Type Beat.mp3" type="audio/mpeg">
-  Your browser does not support the audio tag.
-</audio>
-<html>
-   <head>
-      <style>
+          <style>
       h1 {
          color: #D29B1C;
          font-size: 28pt;
@@ -21,7 +13,12 @@
         }
       </style>
    </head>
-   <body>
+<body>
+  <audio controls>
+  <source src="ASAP Rocky Type Beat.mp3" type="audio/mpeg">
+  Your browser does not support the audio tag.
+</audio>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/YCkpCPZ59l8" frameborder="0" allowfullscreen></iframe>
      <h1><b>Please don't touch my Raf</b></h1>
         <img id="a" class="rocky" src="https://media.giphy.com/media/BLvEwDd2WQ36/giphy.gif"; width: 300px; height; 150px; />
      <h2>I'm racked up like rappers
@@ -40,10 +37,7 @@
 <br />
 <br />
 <br />
-     <video width="320" height="240" controls>
-  <source src="Cloud-9153(1).mp4" type="video/mp4">
-Your browser does not support the video tag.
-</video>
+     
      <h2><i> <a href = "https://www.maisonmargiela.com/us">Margiela </a>               |           <a href= "http://rafsimons.com/">Raf Simons</a>     |             <a href="http://www.supremenewyork.com/">Supreme</a></i></h2>
 <h3>
 <style>
